--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
    font-weight: bolder;
    color: rgb(255, 255, 255);
    text-transform: uppercase;
+   transition: 0.6s ease-in-out;
    
 
 }
@@ -50,10 +51,11 @@
     background: gray;
     width: 70%;
     padding-left: 3rem;
+    background: linear-gradient(#808080 ,black);
     
 }
 .right-con{
-    background: rgb(150, 19, 19);
+    background: linear-gradient(#a30f0f ,black);
     width: 30%;
 }
 .icon, .fa-brands{
@@ -77,6 +79,7 @@
 }
 .content span{
     color: #a30f0f;
+    
 }
 .content h1{
     color: #f7f7f7;
